css/lmf.css
@font-face {  
    font-family: 'Montserrat';
    font-weight: 400;
    font-style: normal;
    font-display: swap; 
    unicode-range: U+000-5FF;
    src: local('Montserrat'),
    url('../assets/fonts/Montserrat.woff2') format('woff2');
}

html, body {
    width: 100%;
    height: 100%;
    font-family: 'Montserrat', sans-serif;
}

a {
    text-decoration: none;
    color: #d90429;
}

nav {
    height: 64px;
    width: 100%;
    background-color: #ddd;
}    

nav img {
    height: 50px;
    margin: 7px 0 7px 5%;
}

nav ul {
    float: right;
    list-style-type: none;
    margin: 0 5% 0 0;
}

nav ul li {
    float: right;
    display: block;
    height: 64px;
    top: 0;
    cursor: pointer;
    text-align: center;
}

nav ul li a {
    display: block;
    margin: 22px 0;
    line-height: 20px;
    font-size: 20px;
    padding: 0 1vw;
    letter-spacing: 1px;
    color: #d90429;
}

nav ul li:hover {
    border-bottom: 1px solid #d90429;
}

nav ul li:hover a {
    transform: scale(1.05);
    font-weight: bolder;
}

@media (max-width: 575px) {
    nav {
        height: 64px;
    }

    nav img {
        display: none;
    }

    nav ul {
        width: 100%;
        margin: 0;
    }

    nav ul li {
        margin: 0 1.25%;
        width: 30%;
        float: left;
    }

    nav ul li a {
        line-height: 15px;
        font-size: 15px;
    }
}

.hero {
    width: 100%;
    margin: 100px auto;
}

.hero img, .hero h1 {
    margin: auto;
    display: block;
    width: 50%;
    max-width: 400px;
    min-width: 200px;
}

.hero h1 {
    margin-top: 25px;
    text-align: center;
    color: #d90429;
    letter-spacing: 3px;
    font-weight: unset;
    font-size: calc(20px + 1vw);
    width: 100%;
    white-space: nowrap;
}

.subcaption {
    width: 100%;
    background-color: #eeeeee;
    text-align: center;
    padding: 10px 0;
    border-top: 1px solid #d90429;
    border-bottom: 1px solid #d90429;
}

h2 {
    font-size: calc(18px + 1vw);
    color: #d90429;
}

.card-container {
    padding: 2.5% 5%;
    display: flex;
}

.card {
    display: flex;
    width: 100%;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
    border-radius: 2px;
}

.card:hover {
    box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
}

.card img {
    width: 100%;
}

.card h3 {
    margin-bottom: 0;
}

.row {
    width: 100%;
}

.project {
    width: 30%;
    float: left;
    margin: 5% 1.5%;
    text-align: center;
}

@media (max-width: 750px) {
    .project {
        width: 95%;
        margin: 5% 2.5%;
    }
}

.project img {
    border: 1px black solid;
}

.projectName {
    font-weight: bolder;
    margin-bottom: 15px;
}

.projectGroup {
    color: #5a5a5a;
    opacity: 0.5;
}

.projectCategory {
    width: 100%;
    float: left;
    margin: 1.5%;
}

.projectCategory img {
    width: 50%;
    max-width: 200px;
    float: left;
    margin: 15px;
    border: 1px solid #d90429;
    padding: 5px;
}

.partner {
    width: 25%;
    margin: 25px 4.16666666666666%;
    float: left;
    height: 35vw;
    max-height: 600px;
}

.partner h3 {
    overflow: hidden;
}

@media (max-width: 750px) {
    .partner {
        width: 40%;
        height: 400px;
        margin: 25px 5%;

    }

    .jp-logo {
        margin: 15% 0 !important;
    }

    .cfw-logo {
        margin: 10% 0 !important;
    }
}

@media (max-width: 500px) {
    .partner {
        width: 40%;
        height: 300px;
        margin: 25px 5%;

    }
}

.partner img {
    border: 1px solid #d90429;
}

.partner video {
    border: 1px solid #d90429;
    width: 100%;
}

.partner-card {
    display: block;
}

.jp-logo {
    border: 0 !important;
    margin: 30% 0;
}

.cfw-logo {
    border: 0 !important;
    margin: 20% 0;
}

.break-word {
    -ms-word-break: break-all;
    -ms-word-wrap: break-all;
    -webkit-word-break: break-word;
    -webkit-word-wrap: break-word;
    word-break: break-word;
    word-wrap: break-word;
    -webkit-hyphens: auto;
    -moz-hyphens: auto;
    hyphens: auto;
}

.contact {
    width: 20%;
    display: block;
    float: left;
    margin: 1.66666666% 6.6666666%;
    text-align: center;
    font-size: 15px;
}

@media (max-width: 750px) {
    .contactUsername {
        font-size: 12px;
    }
}

.contact img {
    width: 100%;
    margin: 5px;
}

.contactMedia {
    font-weight: bolder;
}

footer {
    border-top: 1px solid #d90429;
    height: 64px;
    background-color: #ccc;
}

footer .copyright {
    margin: 2px 5%;
    height: 60px;
    line-height: 60px;
}

